syntax = "proto3";

option go_package = "github.com/sunil206b/Protobuff3_Go/src/complexpb";

package com.address;

message City {
    string name =1;
    string zip_code = 2;
    string country = 3;
}

message Street {
    string name = 1;
    City city = 2;
}

message Building {
    string name = 1;
    string number = 2;
    Street street = 3;
}