syntax = "proto3";

option go_package = "github.com/sunil206b/Protobuff3_Go/src/enumpb";

package com.enum;

message EnumMessage {
    int32 id = 1;
    DayOfWeek dayOfWeek = 2;
}

enum DayOfWeek {
    UNDEFINED = 0;
    SUNDAY = 1;
    MONDAY = 2;
    TUESDAY = 3;
    WEDNESDAY = 4;
    THURSDAY = 5;
    FRIDAY = 6;
    SATURDAY = 7;
}